<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".presentation.ui.reading.DevicesBoundDialogFragment">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/main_text_regular"
        android:textSize="@dimen/text_size_16sp"
        android:text="@string/you_have_panic_attack"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvConfirm"
        style="@style/main_text_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:text="@string/relief"
        android:textColor="@color/primary"

        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvCancel"
        app:layout_constraintEnd_toStartOf="@+id/tvCancel" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCancel"
        style="@style/main_text_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/cancel"
        android:layout_marginBottom="@dimen/dimen_24dp"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvMessage"
        app:layout_constraintTop_toBottomOf="@+id/tvMessage" />



</androidx.constraintlayout.widget.ConstraintLayout>