<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/icon_back"
        app:title="Profile"
        app:titleTextColor="@color/head_bar" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/person"
        android:layout_width="@dimen/dimen_129dp"
        android:layout_height="@dimen/dimen_129dp"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:src="@drawable/trace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        app:shapeAppearance="@style/CircleImageTheme" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/pen"
        android:layout_width="@dimen/dimen_35dp"
        android:layout_height="@dimen/dimen_35dp"
        android:layout_marginEnd="@dimen/dimen_9dp"
        android:layout_marginBottom="@dimen/dimen_9dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/pen2"
        app:layout_constraintBottom_toBottomOf="@+id/person"
        app:layout_constraintEnd_toEndOf="@+id/person" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@color/text_dark"
        android:textSize="@dimen/text_size_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/person" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_64dp"
        android:drawableStart="@drawable/setting_2"
        android:drawableEnd="@drawable/chevron_left"
        android:drawablePadding="@dimen/dimen_16dp"
        android:fontFamily="@font/roboto_medium"
        android:paddingTop="@dimen/dimen_2dp"
        android:paddingBottom="@dimen/dimen_16dp"
        android:text="@string/setting"
        android:textColor="@color/superDarkGray"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView2"
        tools:layout_editor_absoluteX="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:background="@color/boarders"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView3" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:drawableStart="@drawable/key"
        android:drawableEnd="@drawable/chevron_left"
        android:drawablePadding="@dimen/dimen_16dp"
        android:fontFamily="@font/roboto_medium"
        android:paddingTop="@dimen/dimen_2dp"
        android:paddingBottom="@dimen/dimen_16dp"
        android:text="@string/change_password"
        android:textColor="@color/superDarkGray"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView3"
        tools:layout_editor_absoluteX="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:background="@color/boarders"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView4" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:drawableStart="@drawable/history"
        android:drawableEnd="@drawable/chevron_left"
        android:drawablePadding="@dimen/dimen_16dp"
        android:fontFamily="@font/roboto_medium"
        android:paddingTop="@dimen/dimen_2dp"
        android:paddingBottom="@dimen/dimen_16dp"
        android:text="@string/history"
        android:textColor="@color/superDarkGray"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView4"
        tools:layout_editor_absoluteX="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:background="@color/boarders"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView5" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:drawableStart="@drawable/message_question"
        android:drawableEnd="@drawable/chevron_left"
        android:drawablePadding="@dimen/dimen_16dp"
        android:fontFamily="@font/roboto_medium"
        android:paddingTop="@dimen/dimen_2dp"
        android:paddingBottom="@dimen/dimen_16dp"
        android:text="@string/help_amp_support"
        android:textColor="@color/superDarkGray"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView5" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:background="@color/boarders"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView6" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:drawableStart="@drawable/logout"
        android:drawablePadding="@dimen/dimen_16dp"
        android:fontFamily="@font/roboto_medium"
        android:paddingTop="@dimen/dimen_2dp"
        android:paddingBottom="@dimen/dimen_16dp"
        android:text="@string/logout"
        android:textColor="@color/txtRed"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView6" />


</androidx.constraintlayout.widget.ConstraintLayout>